[package]
name = "stealthnet"
version = "0.1.0"
edition = "2021"

[lib]
name = "stealthnet"
path = "src/lib.rs"

[[bin]]
name = "stealthd"
path = "src/bin/stealthd.rs"

[[bin]]
name = "stealthctl"
path = "src/bin/stealthctl.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive"] }
hkdf = "0.12"
ipnet = { version = "2", features = ["serde"] }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
